entities and service tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 fixer.key=1e505130e4a6b3a8f5f69522bb1455ab
 fixer.url=http://data.fixer.io/api/
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
